--- a/.github/workflows/Multiple Source Check.yml
+++ b/.github/workflows/Multiple Source Check.yml
@@ -148,7 +148,19 @@ jobs:
           🚀 OpenClash
                 ● 源码更新了
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍：https://github.com/vernesong/OpenClash
+          📍：https://github.com/vernesong/OpenClash     
+# //////////////////////////////////////////////////////////////////////////////////////////////
+  Clean:
+    if: ${{ always() }}
+    #needs: [Checka,Checkb,Checkc]    
+    runs-on: ubuntu-latest
+    steps:  
+    - name: Repository Dispatch
+      uses: peter-evans/repository-dispatch@v2
+      with:
+          token: ${{ secrets.GH_TOKEN }}
+          repository: Jejz168/OpenWrt
+          event-type: my-event
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Cleaning:
     if: ${{ always() }}
