--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -63,6 +63,7 @@ jobs:
         echo ${{ steps.combHeader.outputs.commitHash_All }} | tee .commitHash_All
 # ///////////////////////////////////////////////////////////////////////////////////////////////////////// 
   Build_x86_64_515:
+    needs: [Checka] 
     if: steps.cacheHash.outputs.cache-hit != 'true'
     runs-on: ubuntu-22.04
 
