--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -72,7 +72,7 @@ jobs:
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////        
   Build_x86_64_515:
     needs: [Checka]   
-    if: ${{ needs.Checkd.outputs.output != 'hello' }}
+    if: ${{ needs.Checka.outputs.output != 'hello' }}
     runs-on: ubuntu-22.04
 
     steps:
