--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -10,8 +10,8 @@ on:
     inputs:
       Checkupdates:
         description: 'Checkupdates connection to Actions'
-        required: true
-        default: 'true'
+        required: false
+        default: 'false'
       ssh:
         description: 'SSH connection to Actions'
         required: false
