--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
       updates:
-        description: 'Checkupdates connection to Actions'
+        description: 'Updates connection to Actions'
         required: false
         default: 'false'
       ssh:
