--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -8,6 +8,10 @@ on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
+      up:
+        description: 'UP connection to Actions'
+        required: false
+        default: 'false'
       ssh:
         description: 'SSH connection to Actions'
         required: false
@@ -72,7 +76,7 @@ jobs:
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////        
   Build_x86_64_515:
     needs: [Checka]   
-    if: ${{ needs.Checka.outputs.output != 'hello' }} 
+    if: ${{ needs.Checka.outputs.output != 'hello' }} && (github.event.inputs.up == 'true' && github.event.inputs.up != 'false') || contains(github.event.action, 'up')
     runs-on: ubuntu-22.04
 
     steps:
