--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -31,6 +31,7 @@ env:
   UPLOAD_FIRMWARE: false
   UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
+  UPDA: ${{ github.event.inputs.up }}
   FILE_NAME: x86_64
   PRODUCT_NAME: x86_64_515
   
@@ -76,7 +77,7 @@ jobs:
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////        
   Build_x86_64_515:
     needs: [Checka]   
-    if: ${{ needs.Checka.outputs.output != 'hello' }} && (github.event.inputs.up == 'true' && github.event.inputs.up != 'false') || contains(github.event.action, 'up')
+    if: ${{ needs.Checka.outputs.output != 'hello' }} && env.UPDA == 'true' && env.UPDA != 'false'
     runs-on: ubuntu-22.04
 
     steps:
