--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -76,7 +76,7 @@ jobs:
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////        
   Build_x86_64_515:
     needs: [Checka]   
-    if: ${{ needs.Checka.outputs.output != 'hello' }} && (github.event.inputs.upd == 'true' && github.event.inputs.upd  != 'false')
+    if: ${{ needs.Checka.outputs.output != 'hello' }} || (github.event.inputs.upd == 'true' && github.event.inputs.upd  != 'false')
     runs-on: ubuntu-22.04
 
     steps:
