--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 # X86_64
 #========================================================================================================================
 
-name: Build_x86_64_515
+name: main
 
 on:
   repository_dispatch:
