--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////         
   Build_x86_64_515:
     needs: [Checka]   
-    if: ${{ needs.Checka.outputs.output != 'hello' }} && ${{github.event.inputs.forceupdate == 'true'}}
+    if: ${{ needs.Checka.outputs.output != 'hello' && github.event.inputs.forceupdate == 'true'}}
     runs-on: ubuntu-22.04
 
     steps:
