--- a/.github/workflows/Build_x86_64_515.yml
+++ b/.github/workflows/Build_x86_64_515.yml
@@ -16,8 +16,8 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  #schedule:
-   # - cron: 15 16 * * 6
+  schedule:
+    - cron: 16 */8 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
