--- a/.github/workflows/Build_armv8.yml
+++ b/.github/workflows/Build_armv8.yml
@@ -17,7 +17,7 @@ on:
         required: false
         default: 'false'
   schedule:
-    - cron: 16 */8 * * *
+    - cron: 16 7,20 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
