Update Delete Artifacts Update Checker.yml

--- a/.github/workflows/Delete Artifacts Update Checker.yml
+++ b/.github/workflows/Delete Artifacts Update Checker.yml
@@ -3,8 +3,8 @@ name: Delete Artifacts Update Checker
 on:
   repository_dispatch:
   workflow_dispatch:
-  schedule:
-    - cron: 16 8 * * * 
+  #schedule:
+  #  - cron: 16 8 * * * 
 env:
   TZ: Asia/Shanghai
 
